--- a/unsugar-code.html
+++ b/unsugar-code.html
@@ -180,7 +180,7 @@
               </div>
             </div>
             <br>
-            <button type="submit" class="btn btn-default" id='log'>Submit</button>
+            <button type="submit" id="log"><span>Submit</span></button>
             <br>
           </div>
           <br>
