This will commit all recent additions

--- a/unsugar-code.html
+++ b/unsugar-code.html
@@ -12,11 +12,11 @@
       <br>
       <h1><font color="#678ECF">Unsugar</font><i>coded</i></h1>
       <br>
-      <h2>An easy way to track your daily carbs and sugars! To start, enter your information.</h2>
-      <br>
         <div class="row">
-          <div class="col-md-6">
+          <!-- <div class="col-md-6"> -->
             <form id="new-contact">
+              <h2>An easy way to track your daily <font color="#678ECF">carbs</font> and <font color="#678ECF">sugars</font>! To start, enter your information.</h2>
+              <br>
               <br>
               <div class="form-group">
                 <label for="new-first-name">First name</label>
@@ -31,16 +31,14 @@
                 <input type="text" class="form-control" id="first-email">
               </div>
               <br>
-              <br>
               <button type="submit" id="add-contact"><span>Create profile</span></button>
               <br>
               <br>
             </form>
-          </div>
+          <!-- </div> -->
         </div>
       <div class="container-well">
-        <ul id="contacts">
-        </ul>
+        <p id="contacts"></p>
         <div id="show-contact">
           <h5>First name: <span class="first-name"></span></h5>
           <h5>Last name: <span class="last-name"></span></h5>
@@ -163,20 +161,20 @@
                           </div>
                         </div>
                       </div>
-              <br>
-              <button type="submit" id="log"><span>Submit</span></button>
-              <br>
-            </div>
-              <br>
+                      <br>
+                      <button type="submit" id="log"><span>Submit</span></button>
+                    <br>
+                  </div>
+                <br>
               <div class="results">
-              </div>
+            </div>
           </form>
         </div>
       </div>
     </div>
   </div>
 </div>
-<footer class="footer"><a href="mealplan.html" target="_self"> Diabetes meal planning and additional resources.</a></footer>
+<footer class="footer"><a href="mealplan.html" target="_self"> Click here to access our diabetes meal planning and additional resources.</a></footer>
 <br>
 </body>
 </html>
